Switch to JSON and add macro invocations

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 			{
 				"language": "quill",
 				"scopeName": "source.quill",
-				"path": "./syntaxes/quill.tmlanguage"
+				"path": "./syntaxes/quill.tmLanguage.json"
 			}
 		]
 	}
